--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 Ekekwe Evaristus George <georgechinedu2018@gmail.com>
-Savwede Godswill Eguolor < add your email here>
+Savwede Godswill Eguolor <godswillsavwede@gmail.com>
